# calc_engine

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/application/: bootstrap.py  config.py
app/application/assemblers/: metrics_assembler.py  portfolio_assembler.py  risk_assembler.py
app/application/errors/: handlers.py  semantic_error.py  semantic_log.py
app/application/gpt/: analyze_text.py
app/application/guards/: service_guard.py
app/application/interfaces/: container.py  dependencies.py
app/application/middlewares/: request_id.py
app/domains/ai_analysis/services/: genai_service.py
app/domains/auth/api/: api_key_route.py
app/domains/auth/repositories/: market_data.py
app/domains/auth/schemas/: api_key_schema.py
app/domains/auth/services/: api_key_service.py
app/domains/finance/api/: metrics_route.py
app/domains/finance/contract/: prompt_contract.py
app/domains/finance/repositories/: market_data.py
app/domains/finance/schemas/: metrics_schema.py
app/domains/finance/services/: basic_metrics_service.py
app/infrastructure/auth/: auth_repository.py  sqlite_api_key_repository.py
app/infrastructure/db/sqlite/: governance.db
app/infrastructure/genai/: gpt_gateway.py  openai_client.py
app/infrastructure/market_data/: validators.py  yfinance_repository.py
app/platform/analytics/engine/: basic_metrics.py
app/platform/analytics/metadata/: manifests.py
app/platform/observability/: auth_middleware.py  log_assembler.py  logger.py  logging_middleware.py
app/platform/utils/: manage_keys.py
(+3 files in other folders)
